--- a/CatDogLoverManagement/Pages/Shared/_Notification.cshtml
+++ b/CatDogLoverManagement/Pages/Shared/_Notification.cshtml
@@ -1,4 +1,4 @@
-﻿@using CatDogLoverManagement.Repository.Models.ViewModels
+﻿@* @using CatDogLoverManagement.Repository.Models.ViewModels
 @{
     var notification = (Notification)ViewData["Notification"];
     if (notification != null)
@@ -27,4 +27,4 @@
             </div>
         </div>
     }
-}
+} *@
