--- a/CatDogLoverManagement/Pages/Post/Edit.cshtml
+++ b/CatDogLoverManagement/Pages/Post/Edit.cshtml
@@ -40,13 +40,28 @@
                 </div>
 
                 <div class="mb-3">
-                    <label for="status" class="form-label">Status</label>
-                    <textarea class="form-control" id="status" asp-for="BlogPost.Status"></textarea>
+                    <label for="featuredImageUpload" class="form-label">Featured Image Upload</label>
+                    <input type="file" id="featuredImageUpload" asp-for="FeaturedImage" />
+
+                    @if(Model.BlogPost.Image != null)
+                    {
+                        <img src="" id="featuredImageDisplay" style="width:300px;" />
+                    }
+                    else
+                    {
+                        <img src="" id="featuredImageDisplay" style="display:none; width:300px;" />
+                    }
+                    
                 </div>
 
                 <div class="mb-3">
                     <label for="image" class="form-label">Image</label>
                     <input type="text" class="form-control" id="image" asp-for="BlogPost.Image" />
+                </div>
+
+                <div class="mb-3">
+                    <label for="status" class="form-label">Status</label>
+                    <input type="text" class="form-control" id="status" asp-for="BlogPost.Status" />
                 </div>
 
                 <div class="mb-3">
@@ -80,3 +95,36 @@ else
     </div>
 }
 
+@section Scripts{
+    <script>
+        var editor = new FroalaEditor('#description', {
+            imageUploadURL: '/api/images'
+        });
+
+        const featuredImageUploadElement = document.getElementById('featuredImageUpload');
+        const image = document.getElementById('image');
+        const featuredImageDisplay = document.getElementById('featuredImageDisplay');
+
+        async function uploadfeaturedImage(e) {
+            console.log(e.target.files[0]);
+
+            let data = new FormData();
+            data.append('file', e.target.files[0]);
+
+            await fetch('/api/images', {
+                method: 'POST',
+                headers: {
+                    'Accept': '*/*',
+                },
+                body: data
+            }).then(response => response.json())
+                .then(result => {
+                    image.value = result.link;
+                    featuredImageDisplay.style.display = 'block';
+                    featuredImageDisplay.src = result.link;
+                });
+        }
+        featuredImageUploadElement.addEventListener('change', uploadfeaturedImage);
+
+    </script>
+}
