--- a/CatDogLoverManagement/Pages/Welcome.cshtml
+++ b/CatDogLoverManagement/Pages/Welcome.cshtml
@@ -1,32 +1,34 @@
 ﻿@page
-@model IndexModel
+@model CatDogLoverManagement.Pages.WelcomeModel
 @{
-    ViewData["Title"] = "Home page";
 }
 
-
-<div class="container col-xxl-8 px-4 py-5">   
-     <div class="row align-items-lg-start g-5 py-5">       
-        <div class="col-12 col-lg-6">
+<div class="d-flex align-items-end">
+    <h1>Welcome @Model.Username </h1>
+    <a href="/index" class="btn bg-dark text-light me-3">Logout</a>
+</div>
+<div class="container col-xxl-8 px-4 py-5">
+    <div class="row align-items-lg-start g-5 py-5">
+        <div class="col-12 col-lg-6">            
             <h1 class="display-4 fw-bold lh-1 mb-2">
-              Bloggie - Cat Dog Love 
+                Bloggie - Cat Dog Love
             </h1>
             <p class="lead">
-             CatDogLoverManagement is a home page for buying and selling pets,
-             booking pet care services, and giving pets.
-             </p>
+                CatDogLoverManagement is a home page for buying and selling pets,
+                booking pet care services, and giving pets.
+            </p>
         </div>
         <div class="col-12 col-lg-6">
-            <img src="https://images.pexels.com/photos/3722196/pexels-photo-3722196.jpeg?auto=compress&cs=tinysrgb&w=600" 
-            class="d-block mx-lg-auto img-fluid" width="300" />
+            <img src="https://images.pexels.com/photos/3722196/pexels-photo-3722196.jpeg?auto=compress&cs=tinysrgb&w=600"
+                 class="d-block mx-lg-auto img-fluid" width="300" />
         </div>
-     </div>
+    </div>
 </div>
 
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-6">
-            
+
             <h2 class="mb-5 display-3"> Blogs</h2>
             @if (Model.Blogs != null && Model.Blogs.Any())
             {
@@ -36,7 +38,7 @@
                         <img src="@blog.Image" alt="@blog.Title" class="mb-2 d-block img-fluid" />
                         <div class="px-4 py-4">
                             <h2 class="mb-2">@blog.Title</h2>
-                            <p>                         
+                            <p>
                                 Date Published : @blog.CreatedDate.ToShortDateString()
                             </p>
                             <p class="mb-2">@blog.Price</p>
@@ -45,10 +47,8 @@
                     </div>
                 }
             }
-            
+
         </div>
     </div>
 </div>
-
-
 
