--- a/CatDogLoverManagement/Pages/Home.cshtml
+++ b/CatDogLoverManagement/Pages/Home.cshtml
@@ -1,15 +1,22 @@
-﻿@page
-@model CatDogLoverManagement.Pages.WelcomeModel
+﻿@page "/"
+@model IndexModel
 @{
+    ViewData["Title"] = "Home page";
 }
 
-<div class="d-flex align-items-end">
-    <h1>Welcome @Model.Username </h1>
-    <a href="/index" class="btn bg-dark text-light me-3">Logout</a>
-</div>
+@{
+    var userName = HttpContext.Session.GetString("username");
+     
+    if (!string.IsNullOrEmpty(userName))
+    {
+        <div><h4>Welcome @userName</h4></div>
+         
+        <a asp-page="Login" asp-page-handler="Logout" class="btn btn-dark">LogOut</a>
+    }
+}
 <div class="container col-xxl-8 px-4 py-5">
     <div class="row align-items-lg-start g-5 py-5">
-        <div class="col-12 col-lg-6">            
+        <div class="col-12 col-lg-6">
             <h1 class="display-4 fw-bold lh-1 mb-2">
                 Bloggie - Cat Dog Love
             </h1>
@@ -24,7 +31,6 @@
         </div>
     </div>
 </div>
-
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-6">
@@ -42,7 +48,6 @@
                                 Date Published : @blog.CreatedDate.ToShortDateString()
                             </p>
                             <p class="mb-2">@blog.Price</p>
-                            <a href="#" class="btn btn-dark">Book</a>
                         </div>
                     </div>
                 }
@@ -51,4 +56,6 @@
         </div>
     </div>
 </div>
+
+
 
