--- a/CatDogLoverManagement/Pages/Post/AddSellOrGivePost.cshtml
+++ b/CatDogLoverManagement/Pages/Post/AddSellOrGivePost.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model CatDogLoverManagement.Pages.Post.AddModel
 @{
+
 }
 
 
@@ -15,55 +16,58 @@
             <div class="mb-3">
                 <label for="title" class="form-label">Title</label>
                 <input type="text" class="form-control" id="title" asp-for="AddBlogPostRequest.Title" />
+                <span asp-validation-for="AddBlogPostRequest.Title" class="text-danger"></span>
             </div>
 
             <div class="mb-3">
                 <label for="description" class="form-label">Description</label>
                 <textarea class="form-control" id="description" asp-for="AddBlogPostRequest.Description"></textarea>
+                <span asp-validation-for="AddBlogPostRequest.Description" class="text-danger"></span>
             </div>
 
             <div class="mb-3">
+                <h3>You can set the price to 0 to make a give a way post</h3>
                 <label for="price" class="form-label">Price</label>
                 <input type="text" class="form-control" id="price" asp-for="AddBlogPostRequest.Price" />
-            </div>
-
-            <div class="mb-3">
-                <label for="createdDate" class="form-label">CreatedDate</label>
-                <input type="date" class="form-control" id="createdDate" asp-for="AddBlogPostRequest.CreatedDate" />
-            </div>
-
+                <span asp-validation-for="AddBlogPostRequest.Price" class="text-danger"></span>
+            </div>         
             <!--Create Image API-->
             <div class="mb-3">
                 <label for="featuredImageUpload" class="form-label">Featured Image Upload</label>
                 <input type="file" id="featuredImageUpload" asp-for="FeaturedImage" />
                 <img src="" id="featuredImageDisplay" style="display:none; width:300px;"/>
+                <span asp-validation-for="FeaturedImage" class="text-danger"></span>
             </div>
-
-            <div class="mb-3">
+            <div class="mb-3"  >
                 <label for="image" class="form-label">Image</label>
                 <input type="text" class="form-control" id="image" asp-for="AddBlogPostRequest.Image" />
+                <span asp-validation-for="AddBlogPostRequest.Image" class="text-danger"></span>
+            </div>              
+            <div class="form-group">
+                <label asp-for="AddAnimalRequest.AnimalName" class="control-label">Animal Name</label>
+                <input asp-for="AddAnimalRequest.AnimalName" class="form-control" />
+                <span asp-validation-for="AddAnimalRequest.AnimalName" class="text-danger"></span>
             </div>
-
-            <div class="mb-3">
-                <label for="status" class="form-label">Status</label>
-                <input type="text" class="form-control" id="status" asp-for="AddBlogPostRequest.Status" />
+            <div class="form-group">
+                <label asp-for="AddAnimalRequest.AnimalType" class="control-label">Animal Type</label>
+                <input asp-for="AddAnimalRequest.AnimalType" class="form-control" />
+                <span asp-validation-for="AddAnimalRequest.AnimalType" class="text-danger"></span>
             </div>
-
-            <div class="mb-3">
-                <label for="userId" class="form-label">UserID</label>
-                <input type="text" class="form-control" id="userId" asp-for="AddBlogPostRequest.UserId" />
+            <div class="form-group">
+                <label asp-for="AddAnimalRequest.Description" class="control-label">Animal Description</label>
+                <input asp-for="AddAnimalRequest.Description" class="form-control" />
+                <span asp-validation-for="AddAnimalRequest.Description" class="text-danger"></span>
             </div>
-
-            <div class="mb-3">
-                <label for="animalId" class="form-label">AnimalID</label>
-                <input type="text" class="form-control" id="animalId" asp-for="AddBlogPostRequest.AnimalId" />
+            <div class="form-group">
+                <label asp-for="AddAnimalRequest.Gender" class="control-label"></label>
+                <input asp-for="AddAnimalRequest.Gender" class="form-control" />
+                <span asp-validation-for="AddAnimalRequest.Gender" class="text-danger"></span>
             </div>
-
-            <div class="mb-3">
-                <label for="service" class="form-label">ServiceId</label>
-                <input type="text" class="form-control" id="serviceId" asp-for="AddBlogPostRequest.ServiceId" />
+            <div class="form-group">
+                <label asp-for="AddAnimalRequest.Age" class="control-label"></label>
+                <input asp-for="AddAnimalRequest.Age" class="form-control" />
+                <span asp-validation-for="AddAnimalRequest.Age" class="text-danger"></span>
             </div>
-
             <div class="mb-3">
                 <button class="btn btn-primary" type="submit">Submit</button>
             </div>
