--- a/CatDogLoverManagement/Pages/Post/MyServicePosts.cshtml
+++ b/CatDogLoverManagement/Pages/Post/MyServicePosts.cshtml
@@ -8,7 +8,7 @@
     {
         <div>
             <div class="container">
-                <form method="post">
+                <form method="post" action="EditServicePost/@blog.PostId">
                     <div class="mb-3" style="display:none">
                         <label for="id" class="form-label">Post Id</label>
                         <input type="text" class="form-control" id="userId" asp-for="@blog.PostId" />
