--- a/CatDogLoverManagement/Pages/Post/EditServicePost.cshtml
+++ b/CatDogLoverManagement/Pages/Post/EditServicePost.cshtml
@@ -45,7 +45,7 @@
 
                 </div>
 
-                <div class="mb-3">
+                <div class="mb-3" style="display:none">
                     <label for="image" class="form-label">Image</label>
                     <input type="text" class="form-control" id="image" asp-for="BlogPost.Image" />
                 </div>
