--- a/CatDogLoverManagement/Pages/Shared/_Layout.cshtml
+++ b/CatDogLoverManagement/Pages/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/index">catdoglovermanagement</a>
+                
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarsupportedcontent"
                         aria-expanded="false" aria-label="toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -65,6 +65,9 @@
                                 </li>
                                 <li>
                                     <a class="dropdown-item" href="/post/MySellOrGivePosts">Sell/Give Posts</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="/post/GivePosts">View Give Posts Comments</a>
                                 </li>
                             </ul>
                             <!--end-->
