--- a/CatDogLoverManagement/Pages/Post/AddSellOrGivePost.cshtml
+++ b/CatDogLoverManagement/Pages/Post/AddSellOrGivePost.cshtml
@@ -18,7 +18,7 @@
                 <input type="text" class="form-control" id="title" asp-for="AddBlogPostRequest.Title" />
                 <span asp-validation-for="AddBlogPostRequest.Title" class="text-danger"></span>
             </div>
-
+            
             <div class="mb-3">
                 <label for="description" class="form-label">Description</label>
                 <textarea class="form-control" id="description" asp-for="AddBlogPostRequest.Description"></textarea>
@@ -26,7 +26,13 @@
             </div>
 
             <div class="mb-3">
-                <h3>You can set the price to 0 to make a give a way post</h3>
+                <div>
+                    <label for="option1">Sell</label>
+                    <input type="radio" id="option1" name="options" value="sell" checked onchange="myFunction()">
+
+                    <label for="option2">Give</label>
+                    <input type="radio" id="option2" name="options" value="give" onchange="myFunction()">
+                </div>
                 <label for="price" class="form-label">Price</label>
                 <input type="text" class="form-control" id="price" asp-for="AddBlogPostRequest.Price" />
                 <span asp-validation-for="AddBlogPostRequest.Price" class="text-danger"></span>
@@ -38,7 +44,7 @@
                 <img src="" id="featuredImageDisplay" style="display:none; width:300px;"/>
                 <span asp-validation-for="FeaturedImage" class="text-danger"></span>
             </div>
-            <div class="mb-3"  >
+            <div class="mb-3" style="display:none" >
                 <label for="image" class="form-label">Image</label>
                 <input type="text" class="form-control" id="image" asp-for="AddBlogPostRequest.Image" />
                 <span asp-validation-for="AddBlogPostRequest.Image" class="text-danger"></span>
@@ -50,21 +56,31 @@
             </div>
             <div class="form-group">
                 <label asp-for="AddAnimalRequest.AnimalType" class="control-label">Animal Type</label>
-                <input asp-for="AddAnimalRequest.AnimalType" class="form-control" />
+                <div>
+                    <select asp-for="AddAnimalRequest.AnimalType">
+                        <option value="Cat">Cat</option>
+                        <option value="Dog">Dog</option>
+                    </select>
+                </div>
                 <span asp-validation-for="AddAnimalRequest.AnimalType" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="AddAnimalRequest.Description" class="control-label">Animal Description</label>
-                <input asp-for="AddAnimalRequest.Description" class="form-control" />
+                <textarea asp-for="AddAnimalRequest.Description" class="form-control"></textarea> 
                 <span asp-validation-for="AddAnimalRequest.Description" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="AddAnimalRequest.Gender" class="control-label"></label>
-                <input asp-for="AddAnimalRequest.Gender" class="form-control" />
+                <div>
+                    <select asp-for="AddAnimalRequest.Gender">
+                        <option value="Male">Male</option>
+                        <option value="Female">Female</option>
+                    </select>
+                </div>
                 <span asp-validation-for="AddAnimalRequest.Gender" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AddAnimalRequest.Age" class="control-label"></label>
+                <label asp-for="AddAnimalRequest.Age" class="control-label">Age (month)</label>
                 <input asp-for="AddAnimalRequest.Age" class="form-control" />
                 <span asp-validation-for="AddAnimalRequest.Age" class="text-danger"></span>
             </div>
@@ -74,7 +90,7 @@
         </form>
     </div>
 </div>
-
+ 
 @section Scripts{
     <script>
         var editor = new FroalaEditor('#description', {
@@ -106,6 +122,22 @@
         }
         featuredImageUploadElement.addEventListener('change', uploadfeaturedImage);
 
+        function myFunction() {
+            var radios = document.getElementsByName("options");
+            var price = document.getElementById("price");
+            for (var i = 0; i < radios.length; i++) {
+                if (radios[1].checked) {                     
+                    price.value = 0;
+                    price.disabled = true;
+                    
+                }else{
+                    price.disabled = false                  ;
+                    price.value = "";
+                }
+            }
+            
+        }
+         
     </script>
 }
 
