Update Give post order status

--- a/CatDogLoverManagement/Pages/Post/EditSellOrGivePost.cshtml
+++ b/CatDogLoverManagement/Pages/Post/EditSellOrGivePost.cshtml
@@ -63,7 +63,7 @@
 
                 <div class="mb-3" style="display:none">
                     <label for="image" class="form-label">Image</label>
-                    <input type="text" class="form-control" id="image" asp-for="BlogPost.Image" />
+                    <input type="hidden" class="form-control" id="image" asp-for="BlogPost.Image" />
                 </div>
 
                 <div class="mb-3" style="display:none">
