--- a/CatDogLoverManagement/Pages/Post/SellOrGivePosts.cshtml
+++ b/CatDogLoverManagement/Pages/Post/SellOrGivePosts.cshtml
@@ -71,7 +71,7 @@
                             @blog.Gender
                         </div>
                         <div class="mb-3">
-                            <label for="age" class="form-label">Age:</label>
+                            <label for="age" class="form-label">Age (month):</label>
                             @blog.Age
                         </div>
                         <div class="mb-3">
